# bk-bscp

./: .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Makefile  README.md  README_EN.md  embed.go  go.mod  go.sum  project.json  多租户迁移plan.md
.agents/agents/: code-reviewer.md  speckit-executor-agent.md  tapd-story-agent.md  workflow-agent.md
.cursor/rules/: tenant.md
.github/workflows/: build.yml  lint.yml  pr-lint.yml  pr-style-check.yml
cmd/: Makefile
cmd/api-server/: api_server.go
cmd/auth-server/: auth_server.go
cmd/cache-service/: cache_service.go
cmd/config-server/: config_server.go
cmd/data-service/: data_service.go
cmd/feed-proxy/: feed_proxy.go
cmd/feed-server/: feed_server.go
cmd/gsekit-migration/: CLI_REFERENCE.md  Dockerfile  Makefile  README.md  gsekit-template-statistics.txt  main.go
cmd/tenant-migration/: Makefile  README.md  main.go  多租户迁移plan.md
cmd/ui/: main.go  root.go
docs/: security-audit-iam-app-level-auth.md  tenant-id-refactoring-report.md
pkg/: go.mod  go.sum
render/: README.md  context.go  errors.go  ginclude.go  ginclude_test.go  renderer.go  renderer_concurrent_test.go  renderer_env_test.go  renderer_test.go  types.go
render/python/: DESIGN.md  MAKO_SANDBOX.md  README.md  main.py  pyproject.toml  requirements.txt
render/python/mako_render/: __init__.py  checker.py  context.py  exceptions.py  patch.py  render.py  visitor.py
render/python/templates/: example.mako  example_context.json
render/python/tests/: test_visitor.py
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
(+1447 files in other folders)
