[project]
name = "bk-bscp-mako-render"
version = "0.1.0"
description = "Mako template rendering module for bk-bscp"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mako>=1.3.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mako_render"]
